[metadata]
version = 0.1.0
description = Recipes for interacting with the Facebooks Segment-Anything model.
url = https://github.com/explosion/prodigy-segment
author = Explosion
author_email = contact@explosion.ai

[options]
zip_safe = true
python_requires = >=3.8
install_requires =
    segment-anything @ git+https://github.com/facebookresearch/segment-anything.git
    opencv-python
    pycocotools
    matplotlib
    onnxruntime
    onnx

# [options.entry_points]
# prodigy_recipes =
#     whisper.audio.transcribe = prodigy_whisper:whisper_audio_transcribe

[bdist_wheel]
universal = true

[sdist]
formats = gztar
