[metadata]
version = 0.1.0
description = Recipes for interacting with the Facebooks Segment-Anything model.
url = https://github.com/explosion/prodigy-segment
author = Explosion
author_email = contact@explosion.ai

[options]
zip_safe = true
python_requires = >=3.8
install_requires =
    opencv-python
    pycocotools
    matplotlib
    onnxruntime
    onnx
    torch
    torchvision

[options.entry_points]
prodigy_recipes =
    segment.image.manual = prodigy_segment:segment_image_manual

[bdist_wheel]
universal = true

[sdist]
formats = gztar
