[metadata]
version = 0.1.1
description = Recipes for interacting with the Facebooks Segment-Anything model.
url = https://github.com/explosion/prodigy-segment
author = Explosion
author_email = contact@explosion.ai

[options]
zip_safe = true
python_requires = >=3.8
install_requires =
    opencv-python==4.8.1.78
    pycocotools==2.0.7
    matplotlib==3.8.1
    onnxruntime==1.16.1
    onnx==1.15.0
    torch==2.1.0
    torchvision==0.16.0
    diskcache==5.6.3
    prodigy>=1.14.0

[options.entry_points]
prodigy_recipes =
    segment.image.manual = prodigy_segment:segment_image_manual
    segment.cache = prodigy_segment:segment_fill_cache
[bdist_wheel]
universal = true

[sdist]
formats = gztar
